--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
 		"prettier": "2.7.1",
 		"vite": "^6.3.5",
 		"vite-plugin-compression": "^0.5.1",
-		"vite-plugin-vue-devtools": "^7.7.6"
+		"vite-plugin-vue-devtools": "^7.7.6",
+		"vite-tsconfig-paths": "^5.1.4"
 	},
 	"optionalDependencies": {
 		"esbuild-linux-64": "^0.15.5"
